// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 1 CAE 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la première étoile. Ces conditions vont être vérifiées par l’ADEME qui reviendra vers vous par mail dans les prochaines 48h (ouvrées) pour vous confirmer l’attribution de la première étoile ou vous demander des informations complémentaires !
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 1 ECI 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la première étoile. Ces conditions vont être vérifiées par l’ADEME qui reviendra vers vous par mail dans les prochaines 48h (ouvrées) pour vous confirmer l’attribution de la première étoile ou vous demander des informations complémentaires !
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 1 Envoyee 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <div
      className="fr-alert fr-alert--success"
    >
      Votre demande de labellisation a bien été envoyée. Vous recevrez dans les 48h ouvrées un mail de l’ADEME.
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 2 3 4 5 Envoyee 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander un audit pour la deuxième étoile
  </h3>
  <div
    className="w-full"
  >
    <div
      className="fr-alert fr-alert--success"
    >
      Votre demande d’audit a bien été envoyée. Vous recevrez prochainement un mail du Bureau d’Appui.
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 2 3 4 CAE 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander un audit pour la deuxième étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la demande d’audit. Après vérification du bon respect des critères, le Bureau d’Appui reviendra vers vous rapidement pour vous informer des suites de la procédure (calendrier de labellisation, constitution d’un dossier de demande de labellisation et désignation d’un auditeur).
    </p>
    <p>
      Il est recommandé de disposer d’une marge minimale de 3 % par rapport au seuil minimum de l’étoile pour tenir compte des risques d’évolution à la baisse de la notation globale lors de l’audit.
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
    <button
      className="fr-btn fr-btn--secondary fr-ml-4w"
      onClick={[Function]}
    >
      Revenir à la préparation de l’audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 2 3 4 ECI 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander un audit pour la deuxième étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la demande d’audit. Après vérification du bon respect des critères, le Bureau d’Appui reviendra vers vous rapidement pour vous informer des suites de la procédure (calendrier de labellisation et désignation d’un auditeur).
    </p>
    <p>
      Il est recommandé de disposer d’une marge minimale de 3 % par rapport au seuil minimum de l’étoile pour tenir compte des risques d’évolution à la baisse de la notation globale lors de l’audit.
    </p>
    <div
      className="fr-alert fr-mb-4w fr-alert--warning"
    >
      <p>
        Pour cet audit ECi, l’ensemble des tâches déclarées « faites » ou « détaillées » comprenant du « fait » doivent présenter des preuves téléchargées au niveau de la sous-action correspondante dans le référentiel.
         
        <b>
          Aucun auditeur ne pourra être attribué en cas de dossier incomplet.
        </b>
      </p>
      <p>
        Pour rappel, cet audit a un coût qui est aujourd’hui financé par l’ADEME. La validation de votre demande d’audit vous engage à respecter les conditions de complétude.
      </p>
    </div>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
    <button
      className="fr-btn fr-btn--secondary fr-ml-4w"
      onClick={[Function]}
    >
      Revenir à la préparation de l’audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 5 CAE 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander un audit pour la cinquième étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la demande d’audit. Après vérification du bon respect des critères, le Bureau d’Appui reviendra vers vous rapidement pour vous informer des suites de la procédure (calendrier européen de labellisation et désignation d’un auditeur national et de l’auditeur international eea Gold).
    </p>
    <p>
      Il est recommandé de disposer d’une marge minimale de 3 % par rapport au seuil minimum de l’étoile pour tenir compte des risques d’évolution à la baisse de la notation globale lors de l’audit.
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
    <button
      className="fr-btn fr-btn--secondary fr-ml-4w"
      onClick={[Function]}
    >
      Revenir à la préparation de l’audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Etoile 5 ECI 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander un audit pour la cinquième étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la demande d’audit. Après vérification du bon respect des critères, le Bureau d’Appui reviendra vers vous rapidement pour vous informer des suites de la procédure (calendrier européen de labellisation et désignation d’un auditeur national et de l’auditeur international eea Gold).
    </p>
    <p>
      Il est recommandé de disposer d’une marge minimale de 3 % par rapport au seuil minimum de l’étoile pour tenir compte des risques d’évolution à la baisse de la notation globale lors de l’audit.
    </p>
    <div
      className="fr-alert fr-mb-4w fr-alert--warning"
    >
      <p>
        Pour cet audit ECi, l’ensemble des tâches déclarées « faites » ou « détaillées » comprenant du « fait » doivent présenter des preuves téléchargées au niveau de la sous-action correspondante dans le référentiel.
         
        <b>
          Aucun auditeur ne pourra être attribué en cas de dossier incomplet.
        </b>
      </p>
      <p>
        Pour rappel, cet audit a un coût qui est aujourd’hui financé par l’ADEME. La validation de votre demande d’audit vous engage à respecter les conditions de complétude.
      </p>
    </div>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
    <button
      className="fr-btn fr-btn--secondary fr-ml-4w"
      onClick={[Function]}
    >
      Revenir à la préparation de l’audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Labellisable COT 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la première étoile. Ces conditions vont être vérifiées par l’ADEME qui reviendra vers vous par mail dans les prochaines 48h (ouvrées) pour vous confirmer l’attribution de la première étoile ou vous demander des informations complémentaires !
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Non labellisable COT (critère fichier atteint) 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la première étoile. Ces conditions vont être vérifiées par l’ADEME qui reviendra vers vous par mail dans les prochaines 48h (ouvrées) pour vous confirmer l’attribution de la première étoile ou vous demander des informations complémentaires !
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeLabellisationModal Non labellisable COT (critère fichier non atteint) 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeLabellisationModal"
>
  <h3>
    Demander la première étoile
  </h3>
  <div
    className="w-full"
  >
    <p>
      Bravo ! Vous remplissez apparemment les conditions minimales requises pour la première étoile. Ces conditions vont être vérifiées par l’ADEME qui reviendra vers vous par mail dans les prochaines 48h (ouvrées) pour vous confirmer l’attribution de la première étoile ou vous demander des informations complémentaires !
    </p>
    <button
      className="fr-btn"
      data-test="EnvoyerDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Envoyer ma demande
    </button>
  </div>
</div>
`;
